Fixed contrast radio of buttons

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -40,7 +40,7 @@ body {
     padding: 10px 20px;
     margin: 0 10px 10px 0;
     text-decoration: none;
-    background-color: #007bff;
+    background-color: #0037FF;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -75,15 +75,15 @@ body {
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #0037FF;
 }
 
 .buttonY:hover {
-    background-color: #aaaa00;
+    background-color: #0037FF;
 }
 
 .buttonR:hover {
-    background-color: #dd0000;
+    background-color: #A30000;
 }
 
 .contacts-table {
@@ -112,7 +112,7 @@ body {
 }
 
 .button-small:hover {
-    background-color: #0056b3;
+    background-color: #0037FF;
 }
 
 .overlay {
@@ -137,7 +137,7 @@ body {
 }
 
 .bottom-text a {
-    color: #007bff;
+    color: #0037FF;
     text-decoration: none;
 }
 
@@ -177,8 +177,8 @@ body {
     cursor: pointer;
 }
 .contact-container button[type="button"]{
-    background-color: #007bff;
+    background-color: #0037FF;
 }
 .contact-container input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #0037FF;
 }
